# BackEndDev_Apf-

./: README.md
calculator/: main.py  models.py  pyproject.toml  routes.py
recipe_api/Recipe/: README.md  database.py  main.py  models.py  pyproject.toml  routes.py  services.py  test.py
recipe_api/Recipe/FastApi_Project/event_booking_api/: main.py  models.py  pyproject.toml  routes.py  test_app.py
recipe_api/Recipe/FastApi_Project/flight_bookings_api/: main.py  models.py  pyproject.toml  routes.py
recipe_api/Recipe/FastApi_Project/payment_processing_api/: main.py  models.py  pyproject.toml  routes.py  test_app.py
recipe_api/Recipe/FastApi_Project/product_search_api/: database.db  dependency.py  main.py  models.py  pyproject.toml  routes.py  user_sql.py
recipe_api/Recipe/FastApi_Project/user_registration/: README.md  database.db  main.py  models.py  pyproject.toml  routes.py  sql.py  test.py
recipe_api/Recipe/FastApi_Project/vehicle_inventory_api/: main.py  models.py  pyproject.toml  routes.py  services.py  test_vehicle.py
