[tool.poetry]
name = "user-registration"
version = "0.1.0"
description = ""
authors = ["kosi"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
